# app.js
@@ -1,20 +1,15 @@
 const express = require("express");
 const app = express();
 const cors = require("cors");
-//IMPORTS FOR SESSION TRACKING
-const cookieParser = require("cookie-parser");
-const bcrypt = require("bcrypt");
-const jwt = require("jsonwebtoken");
+
 const router = express.Router();
+
 // SWAGGER IMPORTS
 const swaggerUi = require("swagger-ui-express");
 const swaggerDoc = require("./swagger.json");
 
 const { connectDB } = require("./api/config/db");
-const {User} = require("./api/models/user.model");
-
-//CONTROLLERS
-const { createUser, loginUser, logoutUser, authenticateJWT } = require("./api/controllers/auth.controller");
+const { createUser, loginUser, authenticateToken } = require("./api/controllers/auth.controller");
 const {
   getCategories,
   createCategory,
@@ -28,11 +23,12 @@ const {
 } = require("./api/controllers/product.controller");
 const { sendPurchaseMail } = require("./api/utils/email");
 const {
-  addCredits,
   getUsers,
+  addCredits,
   purchaseProductWithCredits,
-} = require("./api/controllers/user.contoller");
-app.use(cookieParser())
+} = require("./api/controllers/user.controller");
+
+
 app.use(express.json());
 app.use(cors());
 app.use(express.static("./public"));
@@ -58,10 +54,9 @@ app.use("/swagger", swaggerUi.serve, swaggerUi.setup(swaggerDoc, options));
 //
 //
 //*AUTH
-app.post("/api/auth/register", createUser);
-app.post("/api/auth/login", loginUser);
-app.post("/api/auth/logout", logoutUser);
-app.use(authenticateJWT);
+router.post("/auth/register", createUser);
+router.post("/auth/login", loginUser);
+
 //
 //
 //
@@ -75,21 +70,25 @@ router.delete("/users/:id", (req, res) => {
   //TODO:
 });
 // Add credits to a user
-app.post("/api/users/add-credits", addCredits);
+router.post("/users/add-credits", addCredits, authenticateToken);
+///router.post("/make-admin", authenticateJWT, makeAdmin); 
 //
 //
 //
 //*PRODUCT
 router.get("/products", getAllProducts);
 router.get("/products/getProductsByFilter", getProductsByFilter);
+
 router.post("/products/purchase-product", purchaseProductWithCredits);
 router.post("/products", createProduct);
-app.put("/api/products/:id", updateProduct);
-app.delete("/api/products/:id", deleteProduct);
 router.post("/products/email", (req, res) => {
   sendPurchaseMail();
   res.status(200).send("");
 });
+
+router.put("/products/:id", updateProduct);
+router.delete("/products/:id", deleteProduct);
+
 //
 //
 //
